deploy/k8s/api/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    service: fs-api
  name: fs-api-deploy
spec:
  replicas: 3
  selector:
    matchLabels:
      service: fs-api
  strategy: {}
  template:
    metadata:
      labels:
        service: fs-api
    spec:
      containers:
      - env:
        - name: API_PORT
          value: "9000"
        - name: DB_HOST
          value: galera-ss
        - name: DB_NAME
          value: fullstack_db
        - name: DB_PASSWORD
          value: your_pass
        - name: DB_PORT
          value: "3306"
        - name: DB_USER
          value: your_user
        - name: NODE_ENV
          value: staging
        - name: TZ
          value: utc
        image: ibarretorey/fs-api:staging
        imagePullPolicy: "IfNotPresent"
        name: api
        ports:
        - containerPort: 9000
        resources:
          limits: {}
          requests: {}
      restartPolicy: Always
      serviceAccountName: ""
      volumes: []
status: {}
